feat: Enhance user profile filtering capabilities in repository and service
- Updated UserProfileRepository to include additional filtering options for user profiles, such as username, first name, last name, language code, and premium status.
- Modified UserProfileService to accommodate new parameters for profile retrieval, improving search functionality.
- Enhanced UserProfileController to support new filtering parameters in API requests, allowing for more granular user profile searches.

Benefits:
- Improved flexibility and precision in user profile management for admins.
- Enhanced API usability with additional search criteria for better user experience.